--- a/JpopsukiMy.css
+++ b/JpopsukiMy.css
@@ -186,7 +186,7 @@ ul.thin li { margin:0px 0px; padding:0px; }
 }
 
 #menu ul li a:active {
-        background-color: #9b72cf;
+        background-color: #98D9FF;
 }
 
 #menu ul li a:hover {
